fixed bug with overlap

--- a/css/style.css
+++ b/css/style.css
@@ -372,7 +372,7 @@ body {
 	left: 50%;
 	-webkit-transform: translateX(-50%);
 	transform: translateX(-50%);
-	z-index: 4;
+	z-index: 2;
 }
 
 #sprout-animate img {
